fix navbar color on mobile

--- a/themes/KeepIt/assets/css/_common/_core/media.scss
+++ b/themes/KeepIt/assets/css/_common/_core/media.scss
@@ -16,9 +16,6 @@
             line-height: 5.5em;
             background: $light-background-color;
 
-            .dark-theme & {
-                background: $dark-background-color;
-            }
 
             .navbar-header {
                 display: flex;
