--- a/themes/KeepIt/assets/css/_variables/default.scss
+++ b/themes/KeepIt/assets/css/_variables/default.scss
@@ -22,7 +22,7 @@ $light-border-color: #dcdcdc;
 
 /** dark theme **/
 
-$dark-background-color: #292a2a;
+$dark-background-color: #141d26;
 
 $dark-font-color: #b1b1b1;
 $dark-font-secondary-color: #c1c1c1;
